--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div><h2>Login</h2>
-    <p>faça login</p>
-<form action="">
-    <input type="email" placeholder="email">
-    <input type="password" placeholder="senha">
-    <button>enviarrrrrr</button>
-</form>
-</div>
+    <header>
+        <p>
+            Faça login
+        </p>
+        <div>
+            <form action="">
+                <input type="email" placeholder="emal">
+                <input type="password" placeholder="senha">
+            
+        </div>
+    </header>
 </body>
 </html>
